vmwithencryptedstorage/vmnatlblinux/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_mylinux_name": {
            "defaultValue": "mylinux",
            "type": "String"
        },
        "virtualMachines_myserver_name": {
            "defaultValue": "myserver",
            "type": "String"
        },
          

    "adminPassword": {
      "defaultValue": "Master123456",
      "type": "securestring"
    },
        "virtualMachines_myserver2_name": {
            "defaultValue": "myserver2",
            "type": "String"
        },
        "loadBalancers_myloadbalancer_name": {
            "defaultValue": "myloadbalancer",
            "type": "String"
        },
        "networkInterfaces_mylinux689_name": {
            "defaultValue": "mylinux689",
            "type": "String"
        },
        "networkInterfaces_myserver2126_name": {
            "defaultValue": "myserver2126",
            "type": "String"
        },
        "networkInterfaces_myserver831_name": {
            "defaultValue": "myserver831",
            "type": "String"
        },
        "networkSecurityGroups_mylinux_nsg_name": {
            "defaultValue": "mylinux-nsg",
            "type": "String"
        },
        "networkSecurityGroups_myserver_nsg_name": {
            "defaultValue": "myserver-nsg",
            "type": "String"
        },
        "networkSecurityGroups_myserver2_nsg_name": {
            "defaultValue": "myserver2-nsg",
            "type": "String"
        },
        "publicIPAddresses_mylinux_ip_name": {
            "defaultValue": "mylinux-ip",
            "type": "String"
        },
        "publicIPAddresses_myloadbalancer_name": {
            "defaultValue": "myloadbalancer",
            "type": "String"
        },
        "publicIPAddresses_myserver_ip_name": {
            "defaultValue": "myserver-ip",
            "type": "String"
        },
        "publicIPAddresses_myserver2_ip_name": {
            "defaultValue": "myserver2-ip",
            "type": "String"
        },
        "virtualNetworks_base_vnet_name": {
            "defaultValue": "base-vnet",
            "type": "String"
        },
        "storageAccounts_4basediag6976_name": {
            "defaultValue": "4basediag6976",
            "type": "String"
        },
        "storageAccounts_4basedisks2156_name": {
            "defaultValue": "4basedisks2156",
            "type": "String"
        },
        "storageAccounts_4storeageacclr6_name": {
            "defaultValue": "4storeageacclr6",
            "type": "String"
        },
        "loadBalancers_myloadbalancer_id": {
            "defaultValue": "/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/loadBalancers/myloadbalancer/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_myloadbalancer_id_1": {
            "defaultValue": "/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/loadBalancers/myloadbalancer/backendAddressPools/backendpool",
            "type": "String"
        },
        "loadBalancers_myloadbalancer_id_2": {
            "defaultValue": "/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/loadBalancers/myloadbalancer/probes/probe80",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Compute/virtualMachines/mylinux'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_mylinux_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[parameters('virtualMachines_mylinux_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https://1basedisks2156.blob.core.windows.net/vhds/', parameters('virtualMachines_mylinux_name'),'20170414142008.vhd')]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_mylinux_name')]",
                    "adminUsername": "lawrance",
                        "adminPassword": "[parameters('adminPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_mylinux689_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "https://1basediag6976.blob.core.windows.net/"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_mylinux689_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Compute/virtualMachines/myserver'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_myserver_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[parameters('virtualMachines_myserver_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_4basedisks2156_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_myserver_name'),'20170414113711.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_myserver_name')]",
                    "adminUsername": "lawrance",
                        "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_myserver831_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_4basediag6976_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_4basedisks2156_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_myserver831_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_4basediag6976_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Compute/virtualMachines/myserver2'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_myserver2_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[parameters('virtualMachines_myserver2_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_4basedisks2156_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_myserver2_name'),'20170414122507.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_myserver2_name')]",
                    "adminUsername": "lawrance",
                        "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_myserver2126_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_4basediag6976_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_4basedisks2156_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_myserver2126_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_4basediag6976_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/loadBalancers/myloadbalancer'.",
            "type": "Microsoft.Network/loadBalancers",
            "name": "[parameters('loadBalancers_myloadbalancer_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "LoadBalancerFrontEnd",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_myloadbalancer_name'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "backendpool"
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "balancingrule",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_myloadbalancer_id')]"
                            },
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "Default",
                            "backendAddressPool": {
                                "id": "[parameters('loadBalancers_myloadbalancer_id_1')]"
                            },
                            "probe": {
                                "id": "[parameters('loadBalancers_myloadbalancer_id_2')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "probe80",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 80,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    }
                ],
                "inboundNatRules": [],
                "outboundNatRules": [],
                "inboundNatPools": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_myloadbalancer_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/networkInterfaces/mylinux689'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_mylinux689_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.0.6",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_mylinux_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_base_vnet_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_mylinux_nsg_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_mylinux_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_base_vnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_mylinux_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/networkInterfaces/myserver2126'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_myserver2126_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_myserver2_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_base_vnet_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myserver2_nsg_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_myserver2_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_base_vnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myserver2_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/networkInterfaces/myserver831'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_myserver831_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.0.5",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_myserver_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_base_vnet_name')), '/subnets/default')]"
                            },
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_myloadbalancer_name')), '/backendAddressPools/backendpool')]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myserver_nsg_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_myserver_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_base_vnet_name'))]",
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_myloadbalancer_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myserver_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/networkSecurityGroups/mylinux-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_mylinux_nsg_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/networkSecurityGroups/myserver-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_myserver_nsg_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Port80",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/networkSecurityGroups/myserver2-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_myserver2_nsg_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Port80",
                      "properties": {
                        "protocol": "*",
                        "sourcePortRange": "*",
                        "destinationPortRange": "80",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 1010,
                        "direction": "Inbound"
                      }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/publicIPAddresses/mylinux-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_mylinux_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/publicIPAddresses/myloadbalancer'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_myloadbalancer_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/publicIPAddresses/myserver-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_myserver_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/publicIPAddresses/myserver2-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_myserver2_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Network/virtualNetworks/base-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_base_vnet_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Storage/storageAccounts/4basediag6976'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_4basediag6976_name')]",
            "apiVersion": "2016-01-01",
            "location": "westeurope",
            "tags": {},
            "properties": {},
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Storage/storageAccounts/4basedisks2156'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Premium_LRS",
                "tier": "Premium"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_4basedisks2156_name')]",
            "apiVersion": "2016-01-01",
            "location": "westeurope",
            "tags": {},
            "properties": {},
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9d94f3d1-636a-40f2-836e-d2de79643e2a/resourceGroups/ggog3/providers/Microsoft.Storage/storageAccounts/4storeageacclr6'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_4storeageacclr6_name')]",
            "apiVersion": "2016-01-01",
            "location": "westeurope",
            "tags": {},
            "properties": {
                "encryption": {
                    "keySource": "Microsoft.Storage",
                    "services": {
                        "blob": {
                            "enabled": true
                        }
                    }
                }
            },
            "dependsOn": []
        }
    ]
}
